package com.company.animals;

public enum AnimalTypes {
    LION, LLAMA, CROCODILE
}
